<resources>
    <string name="empty" translatable="false" />
    <string name="click_twice">Please click BACK again to exit</string>
    <string name="check_your_internet_connection">Please check your internet connection</string>
    <string name="an_error_has_occurred">An unexpected error has occurred</string>
    <string name="welcome_to_safety_source">Welcome To Safety Source</string>
    <string name="please_enter_you_phone_number">Please enter you phone number</string>
    <string name="phone_number_hint">Ex: 012 345 678 90</string>
    <string name="country_code">Country Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="by_signing_in_you_agree_on_our">By signing in, you agree on our</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sms_has_been_sent">An SMS message containing a verification code has been sent to your phone number</string>
    <string name="error_invalid_phone">Please enter valid phone number</string>
    <string name="invalid_phone_format">Invalid phone format</string>
    <string name="invalid_verification_code">Invalid Verification Code</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="admin_not_registered">This phone number is not assigned to any admin account, please contact management for further support</string>
    <string name="retailer_not_registered">This phone number is not assigned to any retailer account, please contact management for further support</string>
    <string name="close_app">Close App</string>
    <string name="more">More</string>
    <string name="products">Products</string>
    <string name="transactions">Transactions</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="product_categories">Product Categories</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out ?</string>
    <string name="create_product_category">Create Product Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_name_hint">Ex: Networking Devices</string>
    <string name="team_name_hint">Ex: Cairo Team</string>
    <string name="category_image">Category Image</string>
    <string name="category_rank">Category Rank</string>
    <string name="category_rank_hint">Lowest Rank: 1</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="image_picking_cancelled">Image Picking Cancelled</string>
    <string name="please_pick_an_image_first">Please pick an image first</string>
    <string name="name_field_cannot_be_empty">Name field can\'t be empty</string>
    <string name="invalid_rank_value">Invalid rank value</string>
    <string name="product_category_created_successfully">Product category created successfully</string>
    <string name="product_category_updated_successfully">Product category updated successfully</string>
    <string name="create_product">Create New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_hint">Ex: Cisco MikroTik hAP</string>
    <string name="product_price_in_currency">Product Wholesale Price In EGP</string>
    <string name="product_price_hint">Ex: 100</string>
    <string name="product_commission_value_in_currency">Product Commission Value In EGP</string>
    <string name="product_category">Product Category</string>
    <string name="invalid_price_value">Invalid price value</string>
    <string name="invalid_commission_value">Invalid commission value</string>
    <string name="product_created_successfully">Product created successfully</string>
    <string name="product_updated_successfully">Product updated successfully</string>
    <string name="teams">Teams</string>
    <string name="retailers">Retailers</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="scan_products">Scan Products</string>
    <string name="product_details">Product Details</string>
    <string name="category_products">Category Products</string>
    <string name="product_items">Product Items</string>
    <string name="product_item_details">Product Item Details</string>
    <string name="retailer_details">Retailer Details</string>
    <string name="register_retailer">Register a retailer</string>
    <string name="update_retailer_details">Update retailer details</string>
    <string name="retailer_with_phone_already_registered">Retailer with same phone number already exists</string>
    <string name="retailer_with_phone_does_not_exist">Retailer with provided phone number doesn\'t exists</string>
    <string name="admin_with_phone_already_registered">Admin with same phone number already exists</string>
    <string name="plus_count_more">.. +%1$s more</string>
    <string name="error_missing_camera_permission">Please allow camera to be able to use this feature</string>
    <string name="error_missing_contact_permission">Please allow import contacts to be able to use this feature</string>
    <string name="error_missing_microphone_permission">Please allow microphone to be able to use this feature</string>
    <string name="error_missing_storage_permission">Please allow storage access to use this feature</string>
    <string name="error_missing_location_permission">Please allow location access to use this feature</string>
    <string name="error_missing_gps_permission">Please enable the GPS service to use this feature</string>
    <string name="error_missing_permission">Please enable the service permission to use this feature</string>
    <string name="retailer_scanner_hint">Use the scanner to scan product serials to sell or unsell them immediately</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="product_commission">Product Commission</string>
    <string name="product_wholesome_price">Product Wholesome Price</string>
    <string name="sell_product">Sell Product</string>
    <string name="unsell">Unsell Product</string>
    <string name="sold">SOLD</string>
    <string name="not_sold_yet">NOT SOLD YET</string>
    <string name="pending_unselling">PENDING UNSELLING</string>
    <string name="serial">Serial</string>
    <string name="click_to_view_serials">Click to view multiple serials</string>
    <string name="offer_serials">Offer Serials</string>
    <string name="click_the_serial_to_view_product_item">Click the serial to view product item</string>
    <string name="retailer">Retailer</string>
    <string name="product">Product</string>
    <string name="commission_applied">Commission Applied</string>
    <string name="commission_removed">Commission Removed</string>
    <string name="offer_claimed">Offer Claimed</string>
    <string name="offer_commission_claimed_successfully">Offer Commission Claimed Successfully</string>
    <string name="team">Team</string>
    <string name="amin_action_required">Admin Action Required</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="approve">Approve</string>
    <string name="approve_unselling_question">Are you sure you want to approve this unselling process</string>
    <string name="admin">Admin</string>
    <string name="total_serials">Total number of registered serials</string>
    <string name="sold_items_number">Number of sold items</string>
    <string name="unsold_items_number">Number of pending unsold items</string>
    <string name="add_product_item_text">The scanned serial is not registered, would you like to register and bind it to the current viewed product</string>
    <string name="register_serial">Register Serial</string>
    <string name="register_serials">Register Serials</string>
    <string name="product_serial_registered_successfully">Product serial registered successfully</string>
    <string name="product_serials_registered_successfully">Product serials registered successfully</string>
    <string name="product_status">Product Item Status</string>
    <string name="last_updated">Last Updated</string>
    <string name="create_new_team">Create New Team</string>
    <string name="team_retailers">Team Retailers</string>
    <string name="due_commission">Due Commissions</string>
    <string name="total_redeemed">Total Redeemed</string>
    <string name="redeem">Redeem</string>
    <string name="deduct">Deduct</string>
    <string name="redeem_commission_question">How much do you want this retailer to redeem from his/her due commissions</string>
    <string name="deduct_commission_question">How much do you want to deduct from this retailer commissions</string>
    <string name="commission_redeemed_successfully">Commission redeemed successfully</string>
    <string name="commission_deducted_successfully">Commission deducted successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retailer_name">Retailer Name</string>
    <string name="retailer_name_hint">Please enter your retailer name</string>
    <string name="retailer_team">Retailer Team</string>
    <string name="retailer_phone">Retailer Phone</string>
    <string name="retailer_registered_successfully">Retailer Account Registered Successfully</string>
    <string name="retailer_updated_successfully">Retailer Account Updated Successfully</string>
    <string name="retailer_added_to_team_successfully">Retailer Added to Team Successfully</string>
    <string name="retailer_removed_from_team_successfully">Retailer Removed from Team Successfully</string>
    <string name="retailer_already_in_team">Retailer is already in a team</string>
    <string name="add_retailer_to_team">Add a retailer to this team</string>
    <string name="new_retailer">New Retailer</string>
    <string name="existing_retailer">Existing Retailer</string>
    <string name="admin_registered_successfully">Admin Account Registered Successfully</string>
    <string name="scan_cancelled">Scan Cancelled</string>
    <string name="serial_not_associated_with_any_product">Serial is not associated with any product</string>
    <string name="product_sold_successfully">Product Sold Successfully</string>
    <string name="product_unsold_successfully">Product Unsold Successfully</string>
    <string name="transactions_filter">Transactions Filter</string>
    <string name="any">Any</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="transactions_filtered_by">Transactions are filtered by: </string>
    <string name="transaction_type">Transaction Type</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_name_hint">Please add the new admin name</string>
    <string name="admin_phone">Admin Phone</string>
    <string name="register_admin">Register an admin</string>
    <string name="please_pick_product_category">Please pick a product category</string>
    <string name="please_pick_product">Please pick a product</string>
    <string name="please_pick_set_of_products">Please pick a set of products</string>
    <string name="egyptian_pound">EGP</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="are_you_sure_you_want_to_switch_language">Are you sure you want to switch language to Arabic</string>
    <string name="confirm">Confirm</string>
    <string name="select_excel_file">Select an Excel File</string>
    <string name="no_serials_in_excel_file">Excel file doesn\'t have any serials listed in the first column</string>
    <string name="all_serials_exist">All serials already registered before</string>
</resources>