<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.phoneAuth.PhoneAuthActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bottom_background"
        android:alpha="0.9"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/llLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_40sdp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/welcome_to_safety_source"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/please_enter_you_phone_number"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivBackground"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:src="@color/white"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="@id/llLabels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLabels" />

    <LinearLayout
        android:id="@+id/llTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/by_signing_in_you_agree_on_our"
            android:textColor="@color/grey_dark2"
            android:textSize="12sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorSecondary"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPhone"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_phone"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/country_code"
        android:textColor="@color/grey_dark2"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/countryPicker"
        app:layout_constraintStart_toStartOf="@id/countryPicker" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:ccp_autoDetectCountry="true"
        app:ccp_showFullName="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBackground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/phone_number"
        android:textColor="@color/grey_dark2"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/tilPhone"
        app:layout_constraintStart_toStartOf="@id/tilPhone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_36sdp"
        app:layout_constraintTop_toBottomOf="@id/countryPicker">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPhoneVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/verify_phone_number"
        app:layout_constraintBottom_toTopOf="@id/llTermsAndConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="ivPhone,lblCountry,countryPicker,lblPhone,tilPhone,btnPhoneVerify"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSms"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_sms"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblSmsSent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_21sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/sms_has_been_sent"
        android:textColor="@color/grey_dark2"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBackground"
        tools:ignore="UnusedAttribute" />

    <com.mukesh.OtpView
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:inputType="number"
        android:itemBackground="@color/white2"
        android:textColor="@color/grey_dark"
        app:OtpCursorColor="@color/colorSecondary"
        app:OtpItemCount="6"
        app:OtpLineColor="@color/colorSecondary"
        app:OtpViewType="line"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblSmsSent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCodeVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/verify_phone_number"
        app:layout_constraintBottom_toTopOf="@id/llTermsAndConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grSms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="ivSms,lblSmsSent,pinView,btnCodeVerify"/>

</androidx.constraintlayout.widget.ConstraintLayout>